[package]
name = "nexplore"
version = "0.1.0"
edition = "2021"
authors = ["Garry O'Donnell <garry.euan.odonnell@ntlworld.com>"]
description = "A Terminal User Interface (TUI) for exploring hdf5 & NeXus files"
license = "MIT OR Apache-2.0"
keywords = ["hdf5", "nexus", "tui"]
categories = ["command-line-utilities", "science", "visualization"]
repository = "https://github.com/garryod/nexplore"

[dependencies]
anyhow = { version = "1.0.78" }
clap = { version = "4.5.1", features = ["derive"] }
crossterm = { version = "0.27.0" }
hdf5 = { git = "https://github.com/aldanor/hdf5-rust.git", rev = "26046fb4900ec38afd2a1c0494cff688b288662e", features = [
  "static",
] }
humansize = { version = "2.1.3" }
ratatui = { version = "0.26.1" }
regex = { version = "1.10.3" }
