[package]
name = "nexplore"
version = "0.1.0"
edition = "2021"
authors = ["Garry O'Donnell <garry.euan.odonnell@ntlworld.com>"]
description = "A Terminal User Interface (TUI) for exploring hdf5 & NeXus files"
license = "MIT OR Apache-2.0"
keywords = ["hdf5", "nexus", "tui"]
categories = ["command-line-utilities", "science", "visualization"]
repository = "https://github.com/garryod/nexplore"

[dependencies]
anyhow = { version = "1.0.91" }
clap = { version = "4.5.20", features = ["derive"] }
crossterm = { version = "0.28.1" }
hdf5 = { git = "https://github.com/aldanor/hdf5-rust.git", rev = "43015ddaa87e62b63dc1b1ae7fed49a430e1b53a", features = [
  "static",
] }
humansize = { version = "2.1.3" }
ratatui = { version = "0.27.0" }
regex = { version = "1.11.1" }
